# FaceSync

./: .env.example  .gitignore  .python-version  README.md  alerts.py  app.py  attendance.db  attendance_logic.py  config.py  database.py  face_utils.py  pyproject.toml  requirements.txt  services.py  ui.py
.streamlit/: config.toml
pages/: 1_Register.py  2_Mark_Attendance.py  3_Reports.py  4_Admin.py
