[project]
name = "staff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.2.1",
    "deepface>=0.0.96",
    "numpy>=2.4.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "schedule>=1.2.2",
    "streamlit>=1.52.2",
    "tf-keras>=2.20.1",
    "twilio>=9.9.0",
]
